hard-gists/313761/run.log
=== Docker Run Log for 313761 ===
Started at: Mi 29. Okt 13:42:09 CET 2025

[2025-10-29 13:42:10] START: Running container for 313761
[2025-10-29 13:42:10] SUCCESS: Container cfbfea844edb72a32e38ae7965d4244b0dbb7e001ab672c449c1f70c2960c81a started for 313761
=== Container logs for 313761 ===
  File "/snippet.py", line 62
    sample.data = {'pets': None, 'children': ['Benjamin', 'Clare', 'Joshua'], 'some_date': datetime(2010, 02, 01)}
                                                                                                          ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
=== End of logs for 313761 ===
[2025-10-29 13:42:12] INFO: Container cfbfea844edb72a32e38ae7965d4244b0dbb7e001ab672c449c1f70c2960c81a has stopped
